[package]
name = "micro"
version = "0.1.12"
edition = "2024"
authors = ["JodusMelodus"]
description = "Playground for macros which may result in a useful macro"
license = "MIT"
repository = "https://github.com/JodusMelodus/micro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
